# 24p

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Changelog.md  Dockerfile  HISTORY.md  README.md  TODO.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  plex-source.html  tmdb-source.html
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-vbox.yml  deploy.yml  migrate-dev.yml  security-scan.yml  streaming-notify.yml
.persist/: COMMANDS.md  CONTEXT.md  HISTORY.md  PIPELINE.md  TODO.md
apple-tv/: .gitignore  README.md  project.yml
apple-tv/Sources/: App.swift
data/: lists.json  ratings.json
examples/: reelgood-source.html
ios/: .gitignore  README.md  project.yml
ios/Sources/: App.swift
migrations/: 004_streaming_notifications.sql  005_price_notifications.sql
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
scripts/: generate-favicon.mjs
scripts/server/: 24p-ua-logger.service  bootstrap-vbox.sh  harden-origin.sh  install-gh-runner.sh  log-user-agents.js  log-user-agents.py
src/: instrumentation.ts  middleware.ts  proxy.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  (+2 more)
supabase/: config.toml
test/: client-ip.test.ts  http.test.ts  justwatch-offers.test.ts  rate-limit.test.ts  setup.ts
wireframe/: .$MoveDetailView.drawio.bkp  HomeView.drawio  ListDetailView.drawio  MoveDetailView.drawio  SettingsView.drawio
(+175 files in other folders)
